--- a/Solver/Base.lproj/Main.storyboard
+++ b/Solver/Base.lproj/Main.storyboard
@@ -27,7 +27,7 @@
                                     </constraint>
                                 </constraints>
                                 <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="23"/>
                                 <textInputTraits key="textInputTraits"/>
                                 <variation key="heightClass=regular" ambiguous="YES" misplaced="YES">
                                     <rect key="frame" x="223" y="385" width="153" height="30"/>
